# Readest-lite-Android

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
