[package]
name = "readest-shell"
version = "0.1.0"
description = "Readest Lite Android shell - hardcodes a reader site URL"
authors = ["readest"]
edition = "2021"

[lib]
name = "readest_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = true
panic = "abort"
